--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 name = "tg"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+description = "high-level bindings to the `tg` geometry library"
+repository = "https://github.com/jcdyer/tg-sys"
+readme = "README.md"
+keywords = ["geometry", "math"]
+categories = ["graphics", "mathematics"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
